refactor UrlUtil#isLocalHost to use URI class (instead of URL)